--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -7,4 +7,10 @@
 @screen-xxl: 1600px;
 
 /* Colors */
+/* Colors */
 @primary-color: #8b1d1d; // Deep Heritage Red
+@gold-color: #faad14;
+@text-color: #000000d9;
+@text-color-secondary: #00000073;
+@heading-color: #000000d9;
+@border-color-base: #d9d9d9;
